force-app/main/default/objects/ERDC_Trip__c/ERDC_Trip__c.object-meta.xml
<CustomObject>
    <label>Trip</label>
    <nameField>
        <displayFormat>Trip-{0000000}</displayFormat>
        <label>Trip Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trips</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>