force-app/main/default/objects/ERDC_Trip__c/fields/ERDC_Card__c.field-meta.xml
<CustomField>
    <fullName>ERDC_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Card</label>
    <referenceTo>ERDC_Card__c</referenceTo>
    <relationshipLabel>Trips</relationshipLabel>
    <relationshipName>Trips</relationshipName>
    <type>Lookup</type>
</CustomField>