force-app/main/default/objects/ERDC_Trip__c/fields/ERDC_Station__c.field-meta.xml
<CustomField>
    <fullName>ERDC_Station__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Station</label>
    <referenceTo>ERDC_Station__c</referenceTo>
    <relationshipLabel>Trips</relationshipLabel>
    <relationshipName>Trips</relationshipName>
    <type>Lookup</type>
</CustomField>