force-app/main/default/objects/ERDC_Trip__c/listViews/ERDC_All_Trips.listView-meta.xml
<ListView>
    <fullName>ERDC_All_Trips</fullName>
    <columns>NAME</columns>
    <columns>ERDC_Card__c</columns>
    <columns>ERDC_Station__c</columns>
    <columns>ERDC_Line__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Mine</filterScope>
    <label>All Trips</label>
</ListView>